# Comsion

./: .gitignore  CMakeLists.txt  main.cpp  pch.h
Core/: Color.cpp  Color.h  Config.h  Image.cpp  Image.h  Processor.cpp  Processor.h  Setting.cpp  Setting.h  Type.h  main.cpp  pch.h
Window/: Dialog.cpp  Dialog.h
